@@ -1,3 +1,5 @@
+  - remove property $undefined. "null" is used literally instead (messju)
+
 Version 2.6.0 (Nov 19, 2003)
 ----------------------------
 
